fix(SeekBar): prevent the slider from jumping on time change

--- a/src/routes/Player/ControlBar/SeekBar/styles.less
+++ b/src/routes/Player/ControlBar/SeekBar/styles.less
@@ -14,11 +14,11 @@
 
     .label {
         flex: none;
-        max-width: 5rem;
+        width: 5rem;
         white-space: nowrap;
         text-overflow: ellipsis;
         direction: rtl;
-        text-align: left;
+        text-align: center;
         color: var(--primary-foreground-color);
     }
 
